--- a/index.html
+++ b/index.html
@@ -46,6 +46,39 @@
                 </div>
             </div>
 
+            <!-- box4 -->
+            <div class="lang">
+                <div class="lang-icon">
+                    <i class="fa-solid fa-language"></i>
+                </div>
+                <select class="lang-select border">
+                    <option>EN</option>
+                </select>
+            </div>
+
+            <!-- box5 -->
+            <div class="accs border">
+
+                <!-- <p style="margin-left: 0.3rem;color: white;font-size: 12px;font-weight: bold;">Hello,sign in</p> -->
+                <span><p class="styl1" style="margin-left: 0.3rem;">Hello, sign in</p></span>
+                <select class="accs-select styl2">
+                    <option>Accounts & Lists</option>
+                </select>
+            </div>
+
+            <!-- box6 -->
+            <div class="order border">
+                <span><p class="styl1">Returns</p></span>
+                <p class="styl2">& Orders</p>
+            </div>
+
+            <!-- box7 -->
+            <div class="cart">
+                <div class="cart-icon">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <p>Cart</p>
+            </div>
             
         </div>
     </header>
