--- a/index.html
+++ b/index.html
@@ -78,9 +78,145 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
                 <p>Cart</p>
+            </div> 
+        </div>
+
+        <div class="panel">
+            <div class="panel-all border" style="width: 100px;">
+                <i class="fa-solid fa-bars"></i>
+                <p>All</p>
             </div>
-            
+            <div class="panel-all border">
+                <p class="style3">Fresh</p>
+            </div>
+            <div class="panel-all border">
+                <p class="style3">Amazon mini-tv</p>
+            </div>
+            <div class="panel-all border">
+                <p class="style3">Sell</p>
+            </div>
+            <div class="panel-all border">
+                <p class="style3">Today's Deals</p>
+            </div>
+
+            <div class="panel-end style3" style="justify-content:right; width: 100%; height: 39px;text-align: end; margin-top: 1.2rem;margin-right: 2rem;">
+                <p>New launches from Mobiles, Electronics & more|Shop now</p>
+            </div>
         </div>
     </header>
+
+    <div class="heroo">
+        <!-- <img src="hero_image.jpg"> //the porblem with doing this is, you cant do cover(wrapping of the image) -->
+        <div class="hero-mssg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.</p><hr><hr><hr>
+            <a>Click here to go to amazon.in</a>
+            <!-- <a href="www.amazon.in">Click here to go to amazon.in</a> -->
+        </div>
+    </div>
+    <div class="content">
+        <div class="box1 box ">
+            <h2 style="font-size: 20px; text-align: center;">Toys under 25$ </h2>
+            <div class="box1-img" style="background-image: url('box1-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box2 box ">
+            <h2 style="font-size: 20px; text-align: center;">Deals in PCs </h2>
+            <div class="box1-img" style="background-image: url('box2-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box3 box ">
+            <h2 style="font-size: 20px; text-align: center;">Holiday Gifts! </h2>
+            <div class="box1-img" style="background-image: url('box3-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box4 box ">
+            <h2 style="font-size: 20px; text-align: center;">Skincare Products</h2>
+            <div class="box1-img" style="background-image: url('box4-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;;">See more</p>
+        </div>
+
+        <div class="box1 box ">
+            <h2 style="font-size: 20px; text-align: center;">Health & Hygine</h2>
+            <div class="box1-img" style="background-image: url('box5-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box1 box ">
+            <h2 style="font-size: 20px; text-align: center;">Best Selling Electronics</h2>
+            <div class="box1-img" style="background-image: url('box6-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box1 box ">
+            <h2 style="font-size: 20px; text-align: center;">New ways to work</h2>
+            <div class="box1-img" style="background-image: url('box7-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+
+        <div class="box1 box ">
+            <h2 style="font-size: 20px; text-align: center;">Laptops for every need</h2>
+            <div class="box1-img" style="background-image: url('box8-img.jpg');height: 250px;"></div>
+            <!-- when doing inline style, cant use "" for inner --> 
+            <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
+        </div>
+    </div>
+
+    <footer>
+        <div class="foot-panel1">
+            Back to Top
+        </div>
+        <div class="foot-panel2">
+            <ul>
+                <p style="font-size: 16px;font-weight: bold;">Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>     
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p style="font-size: 16px;font-weight: bold;">Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>     
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p style="font-size: 16px;font-weight: bold;">Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>     
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p style="font-size: 16px;font-weight: bold;">Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>     
+                <a>Amazon Science</a>
+            </ul>
+        </div>
+
+        <div class="foot-panel3">
+            <div class="flogo"></div>
+        </div>
+    </footer>
 </body>
 </html>
