--- a/index.html
+++ b/index.html
@@ -116,56 +116,56 @@
     <div class="content">
         <div class="box1 box ">
             <h2 style="font-size: 20px; text-align: center;">Toys under 25$ </h2>
-            <div class="box1-img" style="background-image: url('box1-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box1-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box2 box ">
             <h2 style="font-size: 20px; text-align: center;">Deals in PCs </h2>
-            <div class="box1-img" style="background-image: url('box2-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box2-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box3 box ">
             <h2 style="font-size: 20px; text-align: center;">Holiday Gifts! </h2>
-            <div class="box1-img" style="background-image: url('box3-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box3-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box4 box ">
             <h2 style="font-size: 20px; text-align: center;">Skincare Products</h2>
-            <div class="box1-img" style="background-image: url('box4-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box4-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;;">See more</p>
         </div>
 
         <div class="box1 box ">
             <h2 style="font-size: 20px; text-align: center;">Health & Hygine</h2>
-            <div class="box1-img" style="background-image: url('box5-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box5-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box1 box ">
             <h2 style="font-size: 20px; text-align: center;">Best Selling Electronics</h2>
-            <div class="box1-img" style="background-image: url('box6-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box6-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box1 box ">
             <h2 style="font-size: 20px; text-align: center;">New ways to work</h2>
-            <div class="box1-img" style="background-image: url('box7-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box7-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
 
         <div class="box1 box ">
             <h2 style="font-size: 20px; text-align: center;">Laptops for every need</h2>
-            <div class="box1-img" style="background-image: url('box8-img.jpg');height: 250px;"></div>
+            <div class="box1-img" style="background-image: url('images/box8-img.jpg');height: 250px;"></div>
             <!-- when doing inline style, cant use "" for inner --> 
             <p style="font-size: 15px;text-align: center;color: blue;">See more</p>
         </div>
